--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body::before {
 }
 
 h1 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: fantasy, cursive;
     font-weight: bold;
     text-align: center;
     margin: 10em auto;
